# LearnVIORB

learn_viorb_lib/: CMakeLists.txt  package.xml
learn_viorb_lib/doc/: manifest.yaml
learn_viorb_lib/doc/html/: BowVector_8cpp.html  BowVector_8cpp__incl.map  BowVector_8cpp__incl.md5  BowVector_8cpp_source.html  Database_8cpp.html  Database_8cpp__incl.map  Database_8cpp__incl.md5  Database_8cpp_source.html  DescManip_8cpp.html  DescManip_8cpp__incl.map  DescManip_8cpp__incl.md5  DescManip_8cpp_source.html  FORB_8cpp.html  FORB_8cpp__incl.map  FORB_8cpp__incl.md5  FORB_8cpp_source.html  FeatureVector_8cpp.html  FeatureVector_8cpp__incl.map  FeatureVector_8cpp__incl.md5  FeatureVector_8cpp_source.html  IMUPreintegrator_8cpp.html  IMUPreintegrator_8cpp__incl.map  IMUPreintegrator_8cpp__incl.md5  IMUPreintegrator_8cpp_source.html  NavState_8cpp.html  NavState_8cpp__incl.map  NavState_8cpp__incl.md5  NavState_8cpp_source.html  QueryResults_8cpp.html  QueryResults_8cpp__incl.map  QueryResults_8cpp__incl.md5  QueryResults_8cpp_source.html  Random_8cpp.html  Random_8cpp__incl.md5  Random_8cpp_source.html  ScoringObject_8cpp.html  ScoringObject_8cpp__incl.map  ScoringObject_8cpp__incl.md5  ScoringObject_8cpp_source.html  Timestamp_8cpp.html  (+206 more)
learn_viorb_lib/include/: BoostArchiver.h  Converter.h  Frame.h  FrameDrawer.h  KeyFrame.h  KeyFrameDatabase.h  LocalMapping.h  LoopClosing.h  Map.h  MapPoint.h  ORBVocabulary.h  Optimizer.h  System.h  Tracking.h  Viewer.h  eigen_config.h
learn_viorb_lib/include/ROS/: GUISystemBuilder.h
learn_viorb_lib/src/: .Frame.cc.swp  Frame.cc  FrameDrawer.cc  Initializer.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapPoint.cc  ORBextractor.cc  ORBmatcher.cc  Optimizer.cc  PnPsolver.cc  Sim3Solver.cc  System.cc  Tracking.cc  Viewer.cc
learn_viorb_lib/src/IMU/: BoostArchiver_modi.h  EigenDenseBaseAddons.h  IMUPreintegrator.cpp  NavState.cpp  NavState.h  configparam.cpp  configparam.h  eigen_config.h  g2otypes.cpp  imudata.cpp  so3.cpp  so3.h
learn_viorb_lib/src/ROS/: GUISystemBuilder.cc
learn_viorb_ros/: CMakeLists.txt  package.xml
learn_viorb_ros/launch/: Octomap_server.launch  realsense_rgbd_vio.launch  realsense_stereo_vio.launch  rs_vio.launch  test_rgbd_vio.launch  testeuroc.launch
learn_viorb_ros/msg/: viorb_msg.msg
learn_viorb_ros/msg_gen/cpp/include/ORB_VIO/: odom_data.h  viorb_msg.h  viorb_msg_with_reset.h
learn_viorb_ros/settings/: EuRoC_Stereo.yaml  TUM1.yaml  d435i.yaml  euroc.yaml  realsense_rgbd.yaml  realsense_stereo.yaml
learn_viorb_ros/src/: ROSPublisher.cpp  ROSPublisher.h  ros_vio.cc  ros_vio_rgbd.cc  ros_vio_stereo.cc
learn_viorb_ros/src/MsgSync/: MsgSynchronizer.cpp  MsgSynchronizer.h
